Things are actually working now. Several things have been done. 1) The folders have been renamed, and some folders have been removed. 2) The POM-files have been drastically shortened down, the only large pom-file is the one for ui. 3) Background music has been added. 4) If not already stated, we have one parent pom and three subpoms: core, storage and ui. 5) Some readme-files have been changed to reflect the newest changes to the pom. Java jdk version is now 17, and required maven version is 3.5 or higher. 6) Documentation have been added to release 2. There is now a readme-file which explains why we did not do json in release 1. 7) Explanation of our labelling system in gitlab has been added to the readme-file in root folder. 8) The method 'writetofile' is probably not working at the moment. We need to find a way to create a file without using absolute paths.